--- a/assets/css/dark.css
+++ b/assets/css/dark.css
@@ -98,6 +98,13 @@ button, input {
 	background:rgb(60,60,60);
 	border-radius:10px;
 	padding:10px;
+	overflow-x:hidden;
+	overflow-y:scroll;
+	scroll-behavior:smooth;
+	-webkit-overflow-scrolling:touch;
+}
+.device-list::-webkit-scrollbar {
+	display:none;
 }
 .loading-overlay {
 	width:100%;
@@ -114,6 +121,12 @@ button, input {
 	width:100%;
 	height:60px;
 	font-size:0;
+	border-radius:10px;
+	margin:0 0 10px 0;
+	background:rgb(30,30,30);
+}
+.device:last-of-type {
+	margin:0;
 }
 .device-ip {
 	display:block;
@@ -124,7 +137,7 @@ button, input {
 	color:rgb(255,255,255);
 	font-size:20px;
 	line-height:60px;
-	padding:0 0 0 20px;
+	padding:0 0 0 10px;
 }
 .send-button {
 	position:absolute;
@@ -132,7 +145,7 @@ button, input {
 	font-size:16px;
 	color:rgb(255,255,255);
 	font-weight:bold;
-	background:rgb(40,40,40);
+	background:rgb(50,50,50);
 	padding:0 15px 0 15px;
 	top:10px;
 	border-radius:10px;
