--- a/assets/css/dark.css
+++ b/assets/css/dark.css
@@ -155,3 +155,18 @@ button, input {
 #desktop .send-button:hover {
 	background:rgb(20,20,20);
 }
+
+.page-overlay {
+	width:100%;
+	height:100%;
+	padding:0;
+	font-size:48px;
+	color:rgb(255,255,255);
+	font-weight:bold;
+	background:none;
+	position:absolute;
+	top:0;
+	left:0;
+	z-index:20;
+	background:rgba(0,0,0,0.9);
+}
