--- a/assets/css/dark.css
+++ b/assets/css/dark.css
@@ -95,6 +95,7 @@ button, input {
 	height:calc(100% - 380px);
 	top:40px;
 	left:calc(50% - 400px / 2 - 10px);
+	max-height:500px;
 	background:rgb(60,60,60);
 	border-radius:10px;
 	padding:10px;
@@ -121,12 +122,27 @@ button, input {
 	width:100%;
 	height:60px;
 	font-size:0;
+	overflow:hidden;
 	border-radius:10px;
 	margin:0 0 10px 0;
 	background:rgb(30,30,30);
 }
 .device:last-of-type {
 	margin:0;
+}
+.device .progress {
+	position:absolute;
+	top:0;
+	left:0;
+	background:rgb(0,150,255);
+	height:100%;
+	cursor:default;
+	width:0;
+	padding:0;
+	z-index:2;
+	font-size:16px;
+	font-weight:bold;
+	color:rgb(255,255,255);
 }
 .device-ip {
 	display:block;
