--- a/views/local.html
+++ b/views/local.html
@@ -36,7 +36,11 @@
 				<button class="users-menu-button whitelist">Whitelist</button>
 				<button class="users-menu-button blacklist">Blacklist</button>
 			</div>
-			<div class="users-menu-bottom"></div>
+			<div class="users-menu-bottom">
+				<div class="users-menu-list requests"></div>
+				<div class="users-menu-list whitelist"></div>
+				<div class="users-menu-list blacklist"></div>
+			</div>
 		</div>
 	</body>
 </html>
