--- a/assets/css/dark.css
+++ b/assets/css/dark.css
@@ -297,7 +297,7 @@ button, input {
 	line-height:60px;
 	padding:0 0 0 10px;
 }
-.permission-button {
+.permission-button, .send-button {
 	position:absolute;
 	height:40px;
 	font-size:16px;
@@ -310,23 +310,7 @@ button, input {
 	right:10px;
 	cursor:pointer;
 }
-#desktop .permission-button:hover {
-	background:rgb(20,20,20);
-}
-.send-button {
-	position:absolute;
-	height:40px;
-	font-size:16px;
-	color:rgb(255,255,255);
-	font-weight:bold;
-	background:rgb(50,50,50);
-	padding:0 15px 0 15px;
-	top:10px;
-	border-radius:10px;
-	right:10px;
-	cursor:pointer;
-}
-#desktop .send-button:hover {
+#desktop .permission-button:hover, #desktop .send-button:hover {
 	background:rgb(20,20,20);
 }
 
