--- a/assets/css/dark.css
+++ b/assets/css/dark.css
@@ -276,7 +276,9 @@ button, input {
 	position:absolute;
 	top:0;
 	left:0;
-	background:rgb(0,150,255);
+	background:#33b7f6;
+	background:linear-gradient(140deg, #33b7f6 5%, #479df8 20%, #6186f6 25%, #8464f0 35%, #ae57cb 45%, #dc529b 60%, #e35691 65%, #f35c71 80%, #fc5b57 100%);
+	background:-webkit-linear-gradient(140deg, #33b7f6 5%, #479df8 20%, #6186f6 25%, #8464f0 35%, #ae57cb 45%, #dc529b 60%, #e35691 65%, #f35c71 80%, #fc5b57 100%);
 	height:100%;
 	cursor:default;
 	width:0;
