--- a/assets/css/resize.css
+++ b/assets/css/resize.css
@@ -32,6 +32,7 @@
 		width:calc(100% - 20px);
 		margin:20px 0;
 		line-height:40px;
+		border-radius:10px;
 	}
 	.notification-area {
 		width:100%;
