--- a/views/local.html
+++ b/views/local.html
@@ -13,6 +13,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="../assets/css/dark.css">
 		<link rel="stylesheet" href="../assets/css/resize.css">
+		<script src="../assets/js/crypto-js.js"></script>
 		<script src="../assets/js/aes.js"></script>
 		<script src="../assets/js/jsencrypt.js"></script>
 		<script src="../assets/js/md5.js"></script>
